<resources>
    <string name="app_name">CheckMeIn</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="trang_chu">Trang chủ</string>
    <string name="quet_the">Quét thẻ</string>
    <string name="thong_tin">Thông tin</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_home_fragment">Hello home fragment</string>
    <string name="diem_danh">Điểm danh</string>
    <string name="hoac">Hoặc</string>
    <string name="quan_ly_to_chuc_cua_ban">Quản lý tổ chức của bạn</string>
    <string name="tao_moi">Tạo mới</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hoat_dong">Hoạt động</string>
    <string name="tai_khoan">Tài khoản</string>
    <string name="tao_hoat_dong">Tạo hoạt động</string>
    <string name="hoat_dong_da_to_chuc">Hoạt động đã tổ chức</string>
    <string name="mssv">ID</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone</string>
    <string name="nhap_mssv">Nhập mã số sinh viên</string>
    <string name="ten_hoat_dong">Tên hoạt động</string>
    <string name="dien_ten_hoat_dong_vao_day">Điền tên hoạt động vào đây</string>
    <string name="tiep_tuc">Tiếp tục</string>
    <string name="ngay">Ngày</string>
    <string name="batdau_ketthuc">Bắt đầu - kết thúc</string>
    <string name="tao">Tạo</string>
    <string name="noi_dung">Nội dung</string>
    <string name="danh_sach">Danh sách</string>
    <string name="trac_nghiem">Trắc nghiệm</string>
    <string name="cau_tra_loi">Câu trả lời</string>
    <string name="tieu_de">Tiêu đề</string>
    <string name="len_lich_gui">Lên lịch gửi</string>
    <string name="change_photo">Change Photo</string>
    <string name="organization_name">Organization Name</string>
    <string name="description">Description</string>
    <string name="collaborator">Collaborator ID</string>
    <string name="gui_mail_cho">Gửi mail cho người tham gia</string>
    <string name="event_code">Event code</string>
    <string name="location">Địa điểm</string>
    <string name="edit">Sửa</string>
    <string name="delete">Xóa</string>
    <string name="ma_so_sinh_vien">Mã số sinh viên</string>
</resources>
