<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/icon_home"
        android:title="@string/trang_chu"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_scan"
        android:enabled="true"
        android:icon="@drawable/icon_scan"
        android:title="@string/quet_the"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_info"
        android:enabled="true"
        android:icon="@drawable/icon_user"
        android:title="@string/thong_tin"
        app:showAsAction="ifRoom" />
</menu>