<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.event.ViewSetNameFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ten_hoat_dong"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:hint="@string/dien_ten_hoat_dong_vao_day"
            android:textAlignment="center"
            android:background="@drawable/custom_et_border_corner"/>
        
        <Button
            android:id="@+id/btnNextToTime"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:text="@string/tiep_tuc"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_button_create_organization_selector"/>
    </LinearLayout>


</FrameLayout>