<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".InfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="380dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_marginTop="13dp"
            android:background="@drawable/custom_checkin_card"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="Nguyễn Hồng Phúc"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"/>

            <com.mikhaellopez.circularimageview.CircularImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ninja_avt"
                app:civ_border_color="@color/colorPrimary"
                app:civ_border_width="2dp"
                app:civ_shadow="true"
                app:civ_shadow_radius="10"
                app:civ_shadow_color="#8BC34A"
                android:layout_gravity="center"
                />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hoac"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_margin="10dp"
            android:textColor="@color/black"/>

        <!--tab view-->
        <android.support.design.widget.TabLayout
            android:id="@+id/tlInfo"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:tabSelectedTextColor="@color/colorPrimary"
            app:tabIndicatorColor="@color/colorPrimary">

            <android.support.design.widget.TabItem
                android:id="@+id/tiActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hoat_dong"
                />

            <android.support.design.widget.TabItem
                android:id="@+id/tiAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tai_khoan"/>
        </android.support.design.widget.TabLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line"/>

        <android.support.v4.view.ViewPager
            android:id="@+id/vpInfor"
            android:layout_gravity="center"
            android:layout_width="350dp"
            android:layout_height="280dp">

        </android.support.v4.view.ViewPager>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <View
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_margin="10dp"
                android:background="@drawable/custom_cricle_orange_bg"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Đã đăng ký"
                android:layout_margin="10dp"
                android:textAlignment="center"/>

            <View
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_margin="10dp"
                android:background="@drawable/custom_cricle_green_bg"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" Đã tham gia"
                android:layout_margin="10dp"
                android:textAlignment="center"/>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>