<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoFragmentAccount">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title_mssv"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="23dp"
                android:text="@string/mssv"/>

            <TextView
                android:id="@+id/mssv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/title_mssv"
                android:text="16520951"/>



        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="3px"
            android:background="@color/line"/>

        <!--=====================================================-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title_email"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="23dp"
                android:text="@string/email"/>

            <EditText
                android:id="@+id/etEmail"
                android:maxLines="1"
                android:layout_width="230dp"
               android:paddingTop="8dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/title_email"
                android:focusable="false"
                android:background="@drawable/custom_et_info_account"
                android:text="nguyenhongphuc98@gmail.com"/>

            <Button
                android:id="@+id/btnEditEmail"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_alignParentRight="true"
                android:visibility="invisible"
                android:background="@drawable/icon_edit"/>

        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="3px"
            android:background="@color/line"/>

<!--=====================================================-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title_phone"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="23dp"
                android:text="@string/phone_number"/>

            <EditText
                android:id="@+id/etPhone"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
               android:layout_centerVertical="true"
                android:focusable="false"
                android:background="@drawable/custom_et_info_account"
                android:layout_toRightOf="@+id/title_phone"
                android:text="0366272703"/>

            <Button
                android:id="@+id/btnEditPhone"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:visibility="invisible"
                android:layout_marginTop="10dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/icon_edit"/>

        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="3px"
            android:background="@color/line"/>
    </LinearLayout>

</FrameLayout>