<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".InfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="331dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_marginTop="13dp"
            android:background="@drawable/custom_checkin_card"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_et_info_account"
                    android:ellipsize="end"
                    android:focusable="false"
                    android:maxLines="1"
                    android:text="Training giữa HKI 2019-2020 ĐSTT" />

                <Button
                    android:id="@+id/btnEditName"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/icon_edit"
                    android:visibility="invisible" />
            </RelativeLayout>

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/circularImageView2"
                android:layout_width="71dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:src="@drawable/ninja_avt"
                app:civ_border_color="@color/colorPrimary"
                app:civ_border_width="2dp"
                app:civ_shadow="true"
                app:civ_shadow_color="#8BC34A"
                app:civ_shadow_radius="10" />


        </LinearLayout>


        <!--tab view-->

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tlInfo"
            android:layout_width="328dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            app:tabIndicatorColor="@color/colorPrimary"
            app:tabSelectedTextColor="@color/colorPrimary">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tiList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/danh_sach" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tiQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trac_nghiem" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tiAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cau_tra_loi" />

        </com.google.android.material.tabs.TabLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/vpParticipant"
            android:layout_width="330dp"
            android:layout_height="314dp"
            android:layout_gravity="center">

        </androidx.viewpager.widget.ViewPager>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_gravity="clip_horizontal">

            <View
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/custom_cricle_orange_bg" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="Đã đăng ký"
                android:textAlignment="center" />

            <View
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/custom_cricle_green_bg" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text=" Đã tham gia"
                android:textAlignment="center" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/custom_checkin_card"
                android:text="Mở rộng" />


        </LinearLayout>

    </LinearLayout>

</FrameLayout>